# keira4

./: .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  .swcrc  Cargo.toml  LICENSE  README.md  eslint.config.js  index.html  jest.config.js  lint-staged.config.js  package-lock.json  package.json  postcss.config.cjs  prettier.config.js  tailwind.config.js  tsconfig.json  vite.config.js
.github/workflows/: ci.yml  release.yml
apps/desktop/: Cargo.toml  rustfmt.toml  tauri.conf.json
apps/desktop/capabilities/: desktop.json
apps/desktop/icons/: icon.icns
apps/desktop/src/: main.rs
apps/web/: .env.example  jest.config.js  package.json  vite.config.js
apps/web/src/: globals.css  router.tsx
apps/web/src/contexts/: auth.tsx  theme.tsx
apps/web/src/layouts/: app.tsx  main.tsx
apps/web/src/screens/: home.tsx
src/: app.tsx  globals.css  main.tsx  router.tsx  svg.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/header-strip/: header-strip.tsx  index.ts
src/contexts/: theme.tsx
src/layouts/: app.tsx  main.tsx
src/lib/: dayjs.ts  i18n.ts
src/screens/: connection.tsx  home.tsx  preferences.tsx
src/utils/: debounce.ts  theme.ts
