[package]
name = "keira4"
version = "0.0.2"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
license = "UNLICENSED"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
mysql_async = "0.35.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tauri = { version = "2.2.5", features = [] }
tauri-plugin-clipboard-manager = "2.2.1"
tauri-plugin-positioner = "2.2.0"
tauri-plugin-updater = "2.5.0"
tokio = { version = "1.43.0", features = ["full"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false
strip = true  # Automatically strip symbols from the binary.
