[package]
name = "keira4"
version = "0.0.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
license = "UNLICENSED"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-positioner = "2.3.0"
tauri-plugin-process = "2.3.0"
tauri-plugin-updater = "2.9.0"
tokio = { version = "1.47.1", features = ["full"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false
strip = true  # Automatically strip symbols from the binary.
