[package]
name = "Keira4"
version = "0.0.1"
description = "Keira4 is an advanced and powerful dice bank editor developed specifically for AzerothCore."
authors = ["you"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "sync-secret-service"] }
log = "0.4.29"
mysql = { version = "28.0.0", features = ["rustls-tls-ring"] }
russh = "0.58.0"
russh-keys = "0.49.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2.8.0"
tauri-plugin-opener = "2.5.3"
tauri-plugin-process = "2.3.1"
tauri-plugin-store = "2.4.2"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-positioner = "2.3.1"
tauri-plugin-updater = "2.10.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
